# auth_server_example

./: .gitignore  Cargo.toml  README.md
auth_client/: index.html
client_one/: package.json
client_one/public/: index.html
client_one/src/: App.tsx
client_one/src/components/dahsboard/: dashboard.component.tsx
client_one/src/components/login/: login.component.tsx  login.css
client_one/src/components/token/: check.token.component.tsx  token.css  validate.token.comonent.tsx
client_one/src/http/: urls.ts
client_one/src/types/: auth.types.ts
client_one/src/utils/: local.storage.ts  redirect.ts  router_paths.ts
client_two/: package.json
client_two/public/: index.html
client_two/src/components/token/: check.token.component.tsx
client_two/src/http/: index.ts
client_two/src/utils/: router_paths.ts
run_time/: main.go
src/: main.rs
src/auth/: login.rs  logout.rs  mod.rs
src/cache/: apty_redis.rs  mod.rs
src/token/: mod.rs  token.rs
src/types/: handlers.rs  login.rs  mod.rs  response.rs  token.rs
src/utils/: apty_uuid.rs  mod.rs
