[package]
name = "auth_server_example"
version = "0.1.0"
authors = ["saiumesh-apty"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#server_framework
actix-web = "1.0.8"

#cors
actix-cors = "0.1.0"

#json_handler
serde_json = "1.0.40"
serde = { version = "1.0.94", features = ["derive"] }

#redis
redis = "0.13.0"

#uuid
uuid = { version = "0.8", features = ["serde", "v4"] }